--- a/polyvSDK/Base.lproj/Main.storyboard
+++ b/polyvSDK/Base.lproj/Main.storyboard
@@ -72,8 +72,8 @@
             <objects>
                 <viewController storyboardIdentifier="detailViewController" id="Pqk-oI-nUp" customClass="DetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="P0H-kg-ve3"/>
-                        <viewControllerLayoutGuide type="bottom" id="EKH-nx-X7B"/>
+                        <viewControllerLayoutGuide type="top" id="9RL-hd-rbM"/>
+                        <viewControllerLayoutGuide type="bottom" id="MPo-CY-bC0"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ZS7-k7-sa2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -84,6 +84,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RI1-2w-NTr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="95" y="-653"/>
+        </scene>
+        <!--Detail View Controller2-->
+        <scene sceneID="fiK-WH-551">
+            <objects>
+                <viewController storyboardIdentifier="detailViewController2" id="F55-t7-rIS" customClass="DetailViewController2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cQ7-ni-aYr"/>
+                        <viewControllerLayoutGuide type="bottom" id="GcF-4X-itB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="j80-gD-s37">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YHJ-eu-hqu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="499" y="-703"/>
         </scene>
         <!--视频-->
         <scene sceneID="nKl-Ft-i0t">
@@ -126,8 +144,8 @@
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="Tsc-Ji-qQC"/>
+                        <viewControllerLayoutGuide type="bottom" id="KTA-jD-3wZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -165,14 +183,14 @@
             <objects>
                 <viewController id="UuM-Zj-HQA" customClass="UploadDemoViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6EA-Cp-4tr"/>
-                        <viewControllerLayoutGuide type="bottom" id="akQ-h1-OGG"/>
+                        <viewControllerLayoutGuide type="top" id="Y7f-54-5Jx"/>
+                        <viewControllerLayoutGuide type="bottom" id="Jmz-Ol-pPh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="gjL-p0-0Tb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fM8-bN-kBd">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fM8-bN-kBd">
                                 <rect key="frame" x="70" y="20" width="180" height="180"/>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oLL-mC-KCa">
@@ -181,7 +199,7 @@
                                     <progressView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7eN-WU-vKS">
                                         <rect key="frame" x="8" y="7" width="165" height="2"/>
                                     </progressView>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" misplaced="YES" text="Status Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gaP-Xc-FRO">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Status Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gaP-Xc-FRO">
                                         <rect key="frame" x="-50" y="0.0" width="280" height="39"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -190,7 +208,7 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L4K-LG-hze">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L4K-LG-hze">
                                 <rect key="frame" x="70" y="208" width="180" height="44"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
                                 <state key="normal" title="选择视频文件">
@@ -210,7 +228,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" link="YES"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5EN-J8-3SU">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5EN-J8-3SU">
                                 <rect key="frame" x="227" y="389" width="46" height="30"/>
                                 <state key="normal" title="关闭">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -221,11 +239,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="5EN-J8-3SU" firstAttribute="height" secondItem="gjL-p0-0Tb" secondAttribute="height" id="MZK-ZA-fdM"/>
-                            <constraint firstItem="L4K-LG-hze" firstAttribute="centerX" secondItem="gaP-Xc-FRO" secondAttribute="centerX" id="PlZ-LC-S0t"/>
-                            <constraint firstItem="fM8-bN-kBd" firstAttribute="centerX" secondItem="gjL-p0-0Tb" secondAttribute="centerX" id="yZz-uV-fID"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eBF-aT-d5C"/>
                     <connections>
@@ -321,8 +334,8 @@
             <objects>
                 <viewController id="24h-Mf-573" customClass="PolyvPlayerDemoViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="WEx-bL-5K7"/>
-                        <viewControllerLayoutGuide type="bottom" id="JnJ-ED-cXg"/>
+                        <viewControllerLayoutGuide type="top" id="pAC-MN-19s"/>
+                        <viewControllerLayoutGuide type="bottom" id="ngO-T3-h1z"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Wef-KN-drr">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
